--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>OpenVidhya</title>
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/responsive.css">
     <link rel="stylesheet" href="./css/animate.min.css">
@@ -45,7 +45,8 @@
                 <div class="collapse navbar-collapse" id="mobile-menu">
                     <ul class="navbar-nav ml-auto">
                         <li class="nav-item mr-3 "><a href="#" class="nav-link font-weight-bold">Home</a></li>
-                        <li class="nav-item mr-3 "><a href="#" class="nav-link ">Apply as a developer</a></li>
+                        <li class="nav-item mr-3 "><a href="#contact-form" class="nav-link ">Apply as a developer</a>
+                        </li>
                         <li class="nav-item mr-3 "><a href="#" class="nav-link">Blog</a></li>
                         <li class="nav-item mr-3 "><a href="#" class="nav-link">Login</a></li>
                     </ul>
@@ -127,8 +128,9 @@
 
                     </div>
                 </div>
-                <button class="btn btn-md mb-3" style="background-color: #08d9d6;">Apply as a developer</button>
-                <button type="button" class="btn btn-outline-info mb-3">Hire developer</button>
+                <a href="#contact-form" class="btn btn-md mb-3 text-dark" style="background-color: #08d9d6;">Apply as a
+                    developer</a>
+                <a href="#contact-form" type="button" class="btn btn-outline-info mb-3 text-info">Hire developer</a>
             </div>
         </section>
         <!--phone carousel-->
@@ -222,93 +224,190 @@
             </div>
         </div>
         <!--end client coding-->
-        <!--start about us coding-->
-        <div class="container text-center my-4">
-            <h2 class="mb-4" style="font-family: 'Russo One','Fruktur';">About Us</h2>
-            <hr>
-            <div style="left:48%;width:40px; height:40px; border-radius:50%;background-color: #ff2562;position: absolute;margin-top:-35px; margin-bottom:30px;"
-                class="d-flex justify-content-center align-items-center text-light"><i class="fa fa-exclamation"></i>
+        <!--start hey geek coding-->
+        <div class="container-fluid bg-light p-4 mb-4">
+            <div class="row px-4 mb-2">
+                <div class="col-md-11">
+                    <h2 class="float-right" style="font-family: 'Russo One','Fruktur';">Hey Geeks!!</h2>
+                    <h4 class="float-right d-block my-2" style="clear: right;font-family: sans-serif;">Want to build
+                        Cool Product?</h4>
+                </div>
+                <div class="col-md-1"></div>
             </div>
-            <p class="text-center my-4 text-justify">ontrary to popular belief, Lorem Ipsum is not simply random text.
-                It
-                has roots in a piece of classical Latin<br class="d-md-block d-none"> literature from 45 BC, making it
-                over
-                2000 years old</p>
-
             <div class="row">
                 <div class="col-md-1"></div>
-                <div class="col-md-4 rounded mt-3">
-                    <img src='./images/hero_1.jpg' class="w-100 rounded">
+                <div class="col-md-4">
+                    <img src="./images/hero_1.jpg" class="w-100 rounded">
                 </div>
-                <div class="col-md-6">
-                    <h5 class="my-3">The OpenVidhya Ecosystem</h5>
-                    <p class="text-justify">openVidhya has created an ecosystem where you get a chance to collaborate
-                        with the best programmers, designers and business developers. You become part of a community of
-                        highly driven professionals, who will support you througout your career.</p>
+                <div class="col-md-6 ">
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
+                        the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley
+                        of type and scrambled it to make a type specimen book. It has survived not only five centuries,
+                        but also the leap into electronic typesetting, remaining essentially unchanged. It was
+                        popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages,
+                        and more recently with desktop publishing software like Aldus PageMaker including versions of
+                        Lorem Ipsum.</p>
                 </div>
                 <div class="col-md-1"></div>
             </div>
-
         </div>
+        <!--end hey geek coding-->
+        <!--start applied learning coding-->
+        <div class="container-fluid text-center bg-white p-4 mb-4">
+            <h4>"Lorem ipsum dolor sit amet,sed do eiusmod tempor incididunt ut labore et<br>
+                dolore magna aliqua. </h4>
+            <hr class="w-25 mb-4">
+            <div class="row">
+                <div class="col-md-3 my-3">
+                    <h5>Neque porro quisquam est qui dolorem ipsum</h5>
+                    <img src="./images/undraw_online_articles_79ff.svg" class="w-100"></<img>
+                </div>
+                <div class="col-md-1"></div>
+                <div class="col-md-3 my-3">
+                    <h5>Neque porro quisquam est qui dolorem ipsum</h5>
+                    <img src="./images/undraw_online_articles_79ff.svg" class="w-100"></<img>
+                </div>
+                <div class="col-md-1"></div>
+                <div class="col-md-3 my-3">
+                    <h5>Neque porro quisquam est qui dolorem ipsum</h5>
+                    <img src="./images/undraw_online_articles_79ff.svg" class="w-100"></<img>
+                </div>
+                <div class="col-md-1"></div>
+            </div>
+        </div>
+        <!--end applied learning coding-->
+        <!--start community coding -->
+        <div class="container-fluid bg-light text-center mb-4 p-4">
+            <h4 class="mb-4">OpenVidhya -a community you belong to</h4>
+            <iframe class="border-0 rounded iframe" height="315" src="https://www.youtube.com/embed/tgbNymZ7vqY"
+                class="border-0 rounded">
+            </iframe>
+        </div>
+        <!--end community coding -->
+        <!--start level up coding-->
+        <div class="container-fluid level">
 
-        <div id="myservice" class="container-fluid text-center w-100 p-3 bg-white">
-            <h2 class="mb-4" style="font-family: 'Russo One','Fruktur';">OUR SERVICE</h2>
+            <div class="level-container">
+                <div class="box">
+                    <div class="content">
+                        <h2>01</h2>
+                        <h3>Amateur</h3>
+                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
+                            been the
+                            industry's standard dummy text ever since the 1500s,Lorem Ipsum is simply dummy text of the
+                            printing
+                            and typesetting industry.</p>
+                        <a href="#contact-form">Join Now</a>
+                    </div>
+                </div>
+
+                <div class="box">
+                    <div class="content">
+                        <h2>02</h2>
+                        <h3>Intermediate</h3>
+                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
+                            been the
+                            industry's standard dummy text ever since the 1500s,Lorem Ipsum is simply dummy text of the
+                            printing
+                            and typesetting industry.</p>
+                        <a href="#contact-form">Join Now</a>
+                    </div>
+                </div>
+
+                <div class="box">
+                    <div class="content">
+                        <h2>03</h2>
+                        <h3>Professional</h3>
+                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
+                            been the
+                            industry's standard dummy text ever since the 1500s,Lorem Ipsum is simply dummy text of the
+                            printing
+                            and typesetting industry.</p>
+                        <a href="#contact-form">Join Now</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!--form coding-->
+        <div class="container-fluid text-center mt-4" id="contact-form">
+            <h2 class="mb-4" style="font-family: 'Russo One','Fruktur';">Contact Us</h2>
             <hr>
             <div style="left:48%;width:40px; height:40px; border-radius:50%;background-color: #ff2562;position: absolute;margin-top:-35px;"
-                class="d-flex justify-content-center align-items-center text-light"><i class="fa fa-rocket"></i></div>
-            <p class="text-center my-4 text-justify">Unique "Virtual Industry Experience" tailored to make you best in your domain.<p>
-                    <div class="row mb-4 p-4">
-                        <div class="col-md-3 mb-3 wow fadeIn slow" data-wow-delay="0.4s" style="height:250px;">
-                            <div class="w-100 h-100 service-box p-3 " style="box-shadow:0px 0px 4px 2px #ccc;">
-                                <i class="fa fa-html5 mb-1" style="font-size:48px;"></i>
-                                <h5>Full Stack Development</h5>
-                                <p class="text-justify">There are many variations of passages of Lorem Ipsum available,
-                                    but the majority have suffered alteration in some</p>
-    
-                            </div>
+                class="d-flex justify-content-center align-items-center text-light"><i class="fa fa-phone"></i></div>
+            <div class="container p-3">
+                <form class="mt-4">
+                    <div class="row">
+                        <div class="col-md-6 mb-4">
+                            <input type="text" name="fname" class="form-control fontAwesome"
+                                placeholder="&#xf2be; First Name" required='required'>
                         </div>
-                        <div class="col-md-3 mb-3 wow fadeIn slow" data-wow-delay="0.6s" style="height:250px;">
-                            <div class="w-100 h-100  service-box p-3" style="box-shadow:0px 0px 4px 2px #ccc;">
-                                <i class="fa fa-code mb-1" style="font-size:48px;"></i>
-                                <h5>UI/UX Designing</h5>
-                                <p class="text-justify">There are many variations of passages of Lorem Ipsum available,
-                                    but the majority have suffered alteration in some</p>
-                            </div>
-                        </div>
-                        <div class="col-md-3 mb-3 wow fadeIn slow" data-wow-delay="0.8s" style="height:250px;">
-                            <div class="w-100 h-100 service-box p-3" style="box-shadow:0px 0px 4px 2px #ccc;">
-                                <i class="fa fa-mobile mb-1" style="font-size:48px;"></i>
-                                <h5>Business Development</h5>
-                                <p class="text-justify">There are many variations of passages of Lorem Ipsum available,
-                                    but the majority have suffered alteration in some</p>
-                            </div>
-                        </div>
-                        <div class="col-md-3 mb-3 wow fadeIn slow" data-wow-delay="1.0s" style="height:250px;">
-                            <div class="w-100 h-100 service-box p-3" style="box-shadow:0px 0px 4px 2px #ccc;">
-                                <i class="fa fa-edit mb-1" style="font-size:48px;"></i>
-                                <h5>Customize Website</h5>
-                                <p class="text-justify">There are many variations of passages of Lorem Ipsum available,
-                                    but the majority have suffered alteration in some</p>
-                            </div>
+                        <div class="col-md-6 mb-4">
+                            <input type="text" name="lname" class="form-control fontAwesome"
+                                placeholder="&#xf2be; Last Name" required='required'>
                         </div>
                     </div>
+                    <input type="email" name="email" class="form-control fontAwesome mb-4"
+                        placeholder="&#xf0e0; Enter Your Email">
+                    <input type="number" name="phone" class="form-control fontAwesome mb-4"
+                        placeholder="&#xf095; Enter Your Phone No">
+                    <textarea class="form-control mb-4" placeholder="Write your questions here... " rows="6"></textarea>
+                    <input type="submit" value="Send Message" class="btn btn-md text-light"
+                        style="background-color: #ff2562;">
+                </form>
+
+            </div>
+
+
         </div>
-
-
-
-
+        <!--footer coding-->
+        <div class="container-fluid footer">
+            <div class="row text-light">
+                <div class="col-md-1"></div>
+                <div class="col-md-3 p-4 text-center">
+                    <span class="fa fa-map-marker" style="font-size: 32px;"></span>
+                    <p>SCF 10-11, Sector 4, MANSA DEVI COMPLEX, Panchkula, Haryana 134109</p>
+                </div>
+                <div class="col-md-3 p-4 text-center">
+                    <span class="fa fa-envelope" style="font-size: 32px;"></span>
+                    <p>openvidhya@gmail.com</p>
+                </div>
+                <div class="col-md-4 p-4 mt-3 text-center d-flex">
+                    <a href='#' style="width:40px;height:40px;"
+                        class="d-flex justify-content-center align-items-center text-light rounded m-2 bg-secondary">
+                        <i class="fa fa-facebook"></i>
+                    </a>
+                    <a href='#' style="width:40px;height:40px;"
+                        class="d-flex justify-content-center align-items-center text-light rounded m-2 bg-secondary">
+                        <i class="fa fa-youtube"></i>
+                    </a>
+                    <a href='#' style="width:40px;height:40px;"
+                        class="d-flex justify-content-center align-items-center text-light rounded m-2 bg-secondary">
+                        <i class="fa fa-twitter"></i>
+                    </a>
+                    <a href='#' style="width:40px;height:40px;"
+                        class="d-flex justify-content-center align-items-center text-light rounded m-2 bg-secondary">
+                        <i class="fa fa-instagram"></i>
+                    </a>
+                </div>
+                <div class="col-md-1"></div>
+            </div>
+        </div>
+        <div class="container-fluid creator p-3 text-secondary">
+            <span class="fa fa-copyright"> 2020 created by sourav -All Right Reserved</span>
+        </div>
     </div>
 
 
 
 
 
-    <script>
-        $(document).ready(function () {
-            $(".p1").mouseover(function () {})
-        });
-    </script>
-    
+
+
+
+
+
+
+
     <script>
         new WOW().init();
     </script>
