--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>OpenVidhya</title>
+    <title>OpenVidhya | Home</title>
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/responsive.css">
     <link rel="stylesheet" href="./css/animate.min.css">
@@ -39,16 +39,18 @@
     <div class="container-fluid p-0 m-0" style="height:100vh">
         <section>
             <!--navbar coding-->
-            <nav class="navbar navbar-expand-lg my-bg">
-                <a href="#" class="navbar-brand text-light">BRAND NAME</a>
+            <nav class="navbar navbar-expand-lg">
+                <a href="./index.html" class="navbar-brand text-light">OpenVidhya</a>
                 <i class="fa fa-bars navbar-toggler nav-icon" style="font-size:32px;color:white;"></i>
                 <div class="collapse navbar-collapse" id="mobile-menu">
                     <ul class="navbar-nav ml-auto">
-                        <li class="nav-item mr-3 "><a href="#" class="nav-link font-weight-bold">Home</a></li>
-                        <li class="nav-item mr-3 "><a href="#contact-form" class="nav-link ">Apply as a developer</a>
+                        <li class="nav-item mr-3 "><a href="./index.html" class="nav-link font-weight-bold">Home</a></li>
+                        <li class="nav-item mr-3 "><a href="./apply.html" class="nav-link ">Apply as a developer</a>
                         </li>
-                        <li class="nav-item mr-3 "><a href="#" class="nav-link">Blog</a></li>
-                        <li class="nav-item mr-3 "><a href="#" class="nav-link">Login</a></li>
+                        <li class="nav-item mr-3 "><a href="./blog.html" class="nav-link">Blog</a></li>
+                        <li class="nav-item mr-3 "><a href="./about.html" class="nav-link">About Us</a></li>
+                        <li class="nav-item mr-3 "><a href="./contactus.html" class="nav-link">Contact Us</a></li>
+                        <li class="nav-item mr-3 "><a href="./login.html" class="nav-link">Login</a></li>
                     </ul>
                 </div>
             </nav>
@@ -393,7 +395,7 @@
             </div>
         </div>
         <div class="container-fluid creator p-3 text-secondary">
-            <span class="fa fa-copyright"> 2020 created by sourav -All Right Reserved</span>
+            <span class="fa fa-copyright"> 2020 created by Nidhi -All Right Reserved</span>
         </div>
     </div>
 
